fixed width for modal content to stretch 90%

--- a/css/modal.css
+++ b/css/modal.css
@@ -22,9 +22,9 @@ perspective effects (not including the modals and the overlay).
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 50%;
-  max-width: 630px;
-  min-width: 320px;
+  width: 90%;
+/*  max-width: 630px;
+  min-width: 320px;*/
   height: auto;
   z-index: 9999;
   visibility: hidden;
